--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@tailwindcss/vite": "^4.0.14",
     "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
