--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-progress": "^1.1.2",
     "@tailwindcss/vite": "^4.0.14",
+    "immer": "^10.1.1",
     "lucide-react": "^0.483.0",
     "motion": "^12.5.0",
     "react": "^19.0.0",
@@ -20,7 +21,7 @@
     "react-dropzone": "^14.3.8",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.0.14",
-    "zustand": "^5.0.3"
+    "zustand": "5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
