--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-progress": "^1.1.2",
     "@tailwindcss/vite": "^4.0.14",
+    "axios": "^1.8.4",
     "immer": "^10.1.1",
     "lucide-react": "^0.483.0",
     "motion": "^12.5.0",
